edgevox-onnx/c-api/c-api.h

// For resampling
/** @brief Opaque linear resampler handle. */
typedef struct EdgevoxOnnxLinearResampler EdgevoxOnnxLinearResampler;
/**
 * @brief Create a linear resampler.
 *
 * If @p filter_cutoff_hz or @p num_zeros is 0, the following defaults
 * are used (same convention as alsa-play.cc):
 *
 * @code
 * float min_freq = samp_rate_in_hz < samp_rate_out_hz ? samp_rate_in_hz
 *                                                 : samp_rate_out_hz;
 * float filter_cutoff_hz = 0.99f * 0.5f * min_freq;
 * int32_t num_zeros = 6;
 * @endcode
 *
 * @param samp_rate_in_hz Input sample rate in Hz. Must be > 0.
 * @param samp_rate_out_hz Output sample rate in Hz. Must be > 0.
 * @param filter_cutoff_hz Low-pass cutoff frequency in Hz. Pass 0 to use
 *                         the default formula above. Must be >= 0.
 * @param num_zeros Low-pass filter width control parameter. Pass 0 to use
 *                  the default value of 6. Must be >= 0.
 * @return A newly allocated resampler, or nullptr on invalid input. Free it
 *         with EdgevoxOnnxDestroyLinearResampler().
 */
EDGEVOX_ONNX_API const EdgevoxOnnxLinearResampler *
EdgevoxOnnxCreateLinearResampler(int32_t samp_rate_in_hz,
                                int32_t samp_rate_out_hz,
                                float filter_cutoff_hz, int32_t num_zeros);
/**
 * @brief Destroy a linear resampler.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateLinearResampler().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxDestroyLinearResampler(
    const EdgevoxOnnxLinearResampler *p);
/**
 * @brief Reset a linear resampler to its initial state.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateLinearResampler().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxLinearResamplerReset(
    const EdgevoxOnnxLinearResampler *p);
/**
 * @brief Output chunk returned by EdgevoxOnnxLinearResamplerResample().
 *
 * Free this object with EdgevoxOnnxLinearResamplerResampleFree().
 */
typedef struct EdgevoxOnnxResampleOut {
  /** Output samples. */
  const float *samples;
  /** Number of output samples. */
  int32_t n;
} EdgevoxOnnxResampleOut;
/**
 * @brief Resample one chunk of input audio.
 *
 * Set @p flush to 1 for the final chunk so buffered samples are emitted.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateLinearResampler().
 * @param input Input sample array.
 * @param input_dim Number of input samples.
 * @param flush 1 if this is the final chunk; otherwise 0.
 * @return A newly allocated output chunk. Free it with
 *         EdgevoxOnnxLinearResamplerResampleFree().
 */
EDGEVOX_ONNX_API const EdgevoxOnnxResampleOut *EdgevoxOnnxLinearResamplerResample(
    const EdgevoxOnnxLinearResampler *p, const float *input, int32_t input_dim,
    int32_t flush);
/**
 * @brief Destroy a resampler output chunk.
 *
 * @param p A pointer returned by EdgevoxOnnxLinearResamplerResample().
 */
EDGEVOX_ONNX_API void EdgevoxOnnxLinearResamplerResampleFree(
    const EdgevoxOnnxResampleOut *p);
/**
 * @brief Return the resampler input sample rate.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateLinearResampler().
 * @return Input sample rate in Hz.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxLinearResamplerResampleGetInputSampleRate(
    const EdgevoxOnnxLinearResampler *p);
/**
 * @brief Return the resampler output sample rate.
 *
 * @param p A pointer returned by EdgevoxOnnxCreateLinearResampler().
 * @return Output sample rate in Hz.
 */
EDGEVOX_ONNX_API int32_t EdgevoxOnnxLinearResamplerResampleGetOutputSampleRate(
    const EdgevoxOnnxLinearResampler *p);